MCMCprec 0.3.3
===========

* Alternative method to compute eigenvectors: RcppEigen package
* Improved starting values for Dirichlet estimation algorithm
* Maximum likelihood estimation of stationary distribution: stationary.mle()
* Changes prior to epsilon=1/M (M= number of sampled models)


MCMCprec 0.3.0
===========

* Improved estimation of Dirichlet parameters to get effective sample size (C++ version of fixed-point algorithm by Mink, 2000)
* New function best.k() to get summary for the k models with highest posterior model probability
* Exports function rdirichlet()
* Updated licence: GPL-3 (instead of GPL-2)


MCMCprec 0.2.1
===========

* New function best.k() to assess estimation uncertainty for the k models with the highest posterior model probabilities


MCMCprec 0.2.0
===========

* Implementations with RcppArmadillo::eig_gen and base::eigen