@@ -1,4 +1,4 @@
-#' MCMCprec: Precision for discrete parameters in transdimensional MCMC
+#' MCMCprec: Precision of discrete parameters in transdimensional MCMC
 #'
 #' MCMCprec estimates the precision of the posterior model probabilities in transdimensional Markov chain Monte Carlo methods (e.g., reversible jump MCMC or product-space MCMC). This is useful for applications of transdimensional MCMC such as model selection, mixtures with varying numbers of components, change-point detection, capture-recapture models, phylogenetic trees, variable selection, and for discrete parameters in MCMC output in general.
 #'
@@ -14,7 +14,6 @@
 #' @importFrom Rcpp evalCpp
 #' @useDynLib MCMCprec
 #' @references
-#' Heck, D. W., Gronau, Q. F., Overstall, A. M., & Wagenmakers, E.-J. (2017).
-#' Estimating the Precision of Transdimensional Markov Chain Monte Carlo Methods.
+#' Heck, D. W., Gronau, Q. F., Overstall, A. M., & Wagenmakers, E.-J. (2017). Quantifying uncertainty in transdimensional Markov chain Monte Carlo using discrete Markov models.
 #'
 "_PACKAGE"
